--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,7 +33,7 @@
 
 
 [build-system]
-  requires      = ["setuptools>=61.2", "wheel", "setuptools_scm[toml]>=3.4.3"]
+  requires      = ["setuptools>=61.2", "wheel", "setuptools_scm[toml]>=3.4.3", "cython"]
   build-backend = "setuptools.build_meta"
 
 [dependency-groups]
